Implement improved connection checks (#1935)
* Implement improved connection checks #1934

- added a list of possible URLs to check for connection to the scan
  context
- added the corresponding builder calls inside the
  OwaspZapScanContextFactory and updated tests
- updated logging inside TargetConnectionChecker
- improved connection checking inside OwaspZapScanExecutor and updated
  tests
- added an additional safety mechanism to the active scan when no sites
  where detected during spider/ajaxSpider
- smaller correlated changes
- use URLs instead of Strings
- improved connection checks and added retry mechanism
- changed user messaging
- adjusted some tests